Fix gutter spacing on grid

--- a/app/assets/css/scss/modules/_post-grid.scss
+++ b/app/assets/css/scss/modules/_post-grid.scss
@@ -3,12 +3,18 @@
   margin: 0 auto;
   display: block;
   padding: 0 em(15);
+
   .post_content_thumbnail {
     margin-bottom: em(-7);
     img {
       border-radius: 0 !important;
     }
   }
+
+  .post_content_meta_author {
+    width: 100%;
+  }
+
   .is-video {
     &:after {
       border-radius: 0;
@@ -23,11 +29,13 @@
   float: right;
   width: calc(100% - 57px);
   margin-bottom: em(-7);
+
   .post_content_meta_actions,
   .post_content_expand {
     width: 50%;
     display: inline-block;
   }
+
   .post_content_meta_actions {
     margin-top: em(19.6);
     float: right;
@@ -71,13 +79,13 @@
   .deckgrid .column-1-3 {
     width: (100% /3);
     &:first-child {
-      padding-right: em(12.5);
+      padding-right: em(15.75);
     }
     &:nth-child(2) {
-      padding: 0 em(12.5);
+      padding: 0 em(8.5);
     }
     &:last-child {
-      padding-left: em(12.5);
+      padding-left: em(15.75);
     }
   }
 }
